add css styling

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
   </head>
   <body>
     <div class="container">
+      <h1>Pig Latin Translator!</h1>
+      <h3>(Igpay Atinlay Anslatortray!)</h3>
 
       <form id="pig-latin">
         <div class="form-group">
-          <label for="latin">Please write a word:</label>
+          <label for="latin">Enter any word or sentence to translate into Pig Latin:</label>
           <input id="latin" type="text">
         </div>
-        <button type="submit" class="btn btn-success">Submit</button>
+        <button type="submit" class="btn">Submit</button>
       </form>
 
       <div id="result">
